--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,14 @@
     --chart-3: #274754;
     --chart-4: #e8c468;
     --chart-5: #f4a462;
+    --sidebar-background: #f5f5f1;
+    --sidebar-foreground: #09090b;
+    --sidebar-primary: #c63c7a;
+    --sidebar-primary-foreground: #fcf3f8;
+    --sidebar-accent: #e4e4e7;
+    --sidebar-accent-foreground: #18181b;
+    --sidebar-border: #e4e4e7;
+    --sidebar-ring: #c63c7a;
   }
 
   .dark {
@@ -56,6 +64,14 @@
     --chart-3: #e88c30;
     --chart-4: #af57db;
     --chart-5: #e23670;
+    --sidebar-background: #0c0a09;
+    --sidebar-foreground: #f2f2f2;
+    --sidebar-primary: #c63c7a;
+    --sidebar-primary-foreground: #fcf3f8;
+    --sidebar-accent: #292524;
+    --sidebar-accent-foreground: #fafafa;
+    --sidebar-border: #27272a;
+    --sidebar-ring: #c63c7a;
   }
 }
 
