--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,11 +24,6 @@
     --input: #e4e4e7;
     --ring: #c63c7a;
     --radius: 0.5rem;
-    --chart-1: #e76e50;
-    --chart-2: #2a9d90;
-    --chart-3: #274754;
-    --chart-4: #e8c468;
-    --chart-5: #f4a462;
     --sidebar-background: #f5f5f1;
     --sidebar-foreground: #09090b;
     --sidebar-primary: #c63c7a;
@@ -37,6 +32,11 @@
     --sidebar-accent-foreground: #18181b;
     --sidebar-border: #e4e4e7;
     --sidebar-ring: #c63c7a;
+    --chart-1: oklch(0.646 0.222 41.116);
+    --chart-2: oklch(0.6 0.118 184.704);
+    --chart-3: oklch(0.398 0.07 227.392);
+    --chart-4: oklch(0.828 0.189 84.429);
+    --chart-5: oklch(0.769 0.188 70.08);
   }
 
   .dark {
@@ -59,11 +59,6 @@
     --border: #27272a;
     --input: #27272a;
     --ring: #c63c7a;
-    --chart-1: #2662d9;
-    --chart-2: #2eb88a;
-    --chart-3: #e88c30;
-    --chart-4: #af57db;
-    --chart-5: #e23670;
     --sidebar-background: #0c0a09;
     --sidebar-foreground: #f2f2f2;
     --sidebar-primary: #c63c7a;
@@ -72,6 +67,11 @@
     --sidebar-accent-foreground: #fafafa;
     --sidebar-border: #27272a;
     --sidebar-ring: #c63c7a;
+    --chart-1: oklch(0.488 0.243 264.376);
+    --chart-2: oklch(0.696 0.17 162.48);
+    --chart-3: oklch(0.769 0.188 70.08);
+    --chart-4: oklch(0.627 0.265 303.9);
+    --chart-5: oklch(0.645 0.246 16.439);
   }
 }
 
